Issue resolved where login text was unreadable in mobile layout.

--- a/themes/SuiteR/css/style.css
+++ b/themes/SuiteR/css/style.css
@@ -3383,9 +3383,7 @@ table legend {
         box-shadow:none !important;
         float:left;
     }
-    .form-control{
-        color:#f7f7f7 !important;
-    }
+
     #mobilegloballinks{
         display:inline;
     }
